# VolFrac

./: .gitignore  CMakeLists.txt  Plot_Accuracy_Results.py  README.md  curvatures.py  ghost.py
.github/workflows/: pages.yml  workflow.yml
cmake/: VolFracConfig.cmake.in
data/: CMakeLists.txt  CreateBezierTrainingData.cpp  CreateTrainingData.cpp  CreateTrainingData_Curve.cpp  CreateTrainingData_Plane.cpp
docs/: Doxyfile.in  mainpage.md
models/: MatVec.hpp  Model.cpp  Model.hpp  TorchWrapper.cpp  TorchWrapper.hpp  VolFrac.pt  best_model.pth  normalization.pt
py/: Model.py  Plot_Accuracy_Results.py  Plot_Timing_Results.py  Test_model.py  Train.py  Train_Curvature.py  Train_LineArea.py  Train_Planes.py  ghost.py  test_slack.py
results/: Accuracy_Ghost.cpp  Accuracy_line_test.cpp  Accuracy_test.cpp  CMakeLists.txt  LatexTable.hpp  TestFramework.hpp  Timing_test.cpp
src/: Bezier.cpp  Bezier.hpp  CircleVolFrac.cpp  CircleVolFrac.hpp  Grid.cpp  Grid.hpp  IntervalTree.hpp  KDTree.hpp  PolyVolFrac.cpp  PolyVolFrac.hpp
tests/: BezierTest.cpp  CMakeLists.txt  ComputeVolFracCircleTest.cpp  GridTest.cpp  IntervalTreeTest.cpp  KDTreeTest.cpp  MatrixVectorTest.cpp  ModelTest.cpp  PolyVolFracTest.cpp  TorchWrapperTest.cpp  VolumeFractionCurvTest.cpp  VolumeFractionTest.cpp
